feat: 0.7.1-alpha.1 — render pass (Camera Utils + Flashback, perf mods, DH 512, fullscreen, BSL ultra + DoF) + playtest wave 2026-08-06 (clusters 10→8)
Render/perf pack pass plus the start of the 2026-08-06 playtest wave (working the
log 10→1). build.gradle.kts -> 0.7.1-alpha.1. Several edits touch Java, so a
gradle build is needed for those to apply.

Playtest wave 2026-08-06 (so far):
- #9 wild spawns: added starter species skiddo + totodile to the SpecialSpawnConfig
  blacklist (a wild Skiddo leaked — starters must be gift-only). Growlithe deliberately
  NOT blacklisted (base-species block would kill regular Growlithe too — awaiting ruling).
  Confirmed wild-level clamp exists (applyWildLevel → [minLevel, cap+maxOffset], defaults
  0/+10, only when a player is within 256b).
- #8 dojo: KO-return coord (DojoConfig.dojoEject*) moved to marker P22 (1058.9/119/3186.3).
  Ryu sleeping-pose request NOT actioned as a built-in pose — ENGINE_FINDINGS: DefaultPose
  is a no-op for humanoids; the existing CUSTOM prone pose is already the only way to lie
  him down (a built-in swap would leave him standing). Retune-to-on-back available on request.
- #7 power plant: the engine already loads the right coords (bundled powerplant.json) and only
  toggles LIT / intercepts clicks on EXISTING blocks — the finished map never carried the copper
  bulbs + levers. Added install wave repairs_a35 (arm+apply, wired into install/repairs.mcfunction)
  that setblocks the 9 copper bulbs + 8 levers at the canonical coords on every fresh install
  (world is built → all world setup rides the install run). Lever facings are cosmetic best-guesses
  (engine's bool[9] is truth) — eyeball in-world, adjust in the apply if any pop.
- #2 trident race: ends the instant the 5th (last) ring is passed (dropped the separate finish box
  in tick_run.mcfunction); a failed run (expire timeout / relog-abandon) confiscates the loaner
  trident via a new custom_data marker ci_tide_trident (clear predicate targets o